--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Facundo Bayo
 description: Native Android dev | Kotlin
-logo: /img/profilepic.png
+logo: /img/me.png
